// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 [acorn] format 1`] = `
"Unexpected character '{' (1:2)
> 1 | #{a() {}}
    |  ^
Cause: Unexpected character '{' (1:1)"
`;

exports[`snippet: #0 [babel] format 1`] = `
"Only properties and spread elements are allowed in record definitions. (1:3)
> 1 | #{a() {}}
    |   ^
Cause: Only properties and spread elements are allowed in record definitions. (1:2)"
`;

exports[`snippet: #0 [espree] format 1`] = `
"Unexpected character '{' (1:2)
> 1 | #{a() {}}
    |  ^
Cause: Unexpected character '{'"
`;

exports[`snippet: #0 [meriyah] format 1`] = `
"'#' not followed by identifier (1:1)
> 1 | #{a() {}}
    | ^
Cause: [1:1]: '#' not followed by identifier"
`;

exports[`snippet: #1 [acorn] format 1`] = `
"Unexpected character '{' (1:2)
> 1 | #{async b() {}}
    |  ^
Cause: Unexpected character '{' (1:1)"
`;

exports[`snippet: #1 [babel] format 1`] = `
"Only properties and spread elements are allowed in record definitions. (1:3)
> 1 | #{async b() {}}
    |   ^
Cause: Only properties and spread elements are allowed in record definitions. (1:2)"
`;

exports[`snippet: #1 [espree] format 1`] = `
"Unexpected character '{' (1:2)
> 1 | #{async b() {}}
    |  ^
Cause: Unexpected character '{'"
`;

exports[`snippet: #1 [meriyah] format 1`] = `
"'#' not followed by identifier (1:1)
> 1 | #{async b() {}}
    | ^
Cause: [1:1]: '#' not followed by identifier"
`;

exports[`snippet: #2 [acorn] format 1`] = `
"Unexpected character '{' (1:2)
> 1 | #{get c() {}}
    |  ^
Cause: Unexpected character '{' (1:1)"
`;

exports[`snippet: #2 [babel] format 1`] = `
"Only properties and spread elements are allowed in record definitions. (1:3)
> 1 | #{get c() {}}
    |   ^
Cause: Only properties and spread elements are allowed in record definitions. (1:2)"
`;

exports[`snippet: #2 [espree] format 1`] = `
"Unexpected character '{' (1:2)
> 1 | #{get c() {}}
    |  ^
Cause: Unexpected character '{'"
`;

exports[`snippet: #2 [meriyah] format 1`] = `
"'#' not followed by identifier (1:1)
> 1 | #{get c() {}}
    | ^
Cause: [1:1]: '#' not followed by identifier"
`;

exports[`snippet: #3 [acorn] format 1`] = `
"Unexpected character '{' (1:2)
> 1 | #{set d(_) {}}
    |  ^
Cause: Unexpected character '{' (1:1)"
`;

exports[`snippet: #3 [babel] format 1`] = `
"Only properties and spread elements are allowed in record definitions. (1:3)
> 1 | #{set d(_) {}}
    |   ^
Cause: Only properties and spread elements are allowed in record definitions. (1:2)"
`;

exports[`snippet: #3 [espree] format 1`] = `
"Unexpected character '{' (1:2)
> 1 | #{set d(_) {}}
    |  ^
Cause: Unexpected character '{'"
`;

exports[`snippet: #3 [meriyah] format 1`] = `
"'#' not followed by identifier (1:1)
> 1 | #{set d(_) {}}
    | ^
Cause: [1:1]: '#' not followed by identifier"
`;

exports[`snippet: #4 [acorn] format 1`] = `
"Unexpected character '{' (1:2)
> 1 | #{*e() {}}
    |  ^
Cause: Unexpected character '{' (1:1)"
`;

exports[`snippet: #4 [babel] format 1`] = `
"Only properties and spread elements are allowed in record definitions. (1:3)
> 1 | #{*e() {}}
    |   ^
Cause: Only properties and spread elements are allowed in record definitions. (1:2)"
`;

exports[`snippet: #4 [espree] format 1`] = `
"Unexpected character '{' (1:2)
> 1 | #{*e() {}}
    |  ^
Cause: Unexpected character '{'"
`;

exports[`snippet: #4 [meriyah] format 1`] = `
"'#' not followed by identifier (1:1)
> 1 | #{*e() {}}
    | ^
Cause: [1:1]: '#' not followed by identifier"
`;
